fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -146,7 +146,7 @@ ol, ul {
 .social {
 	font-size: 40px;	
 	transition: transform 0.5s;
-	padding: 0.3em 1em 0 0;
+	padding: 0.3em 1em 0 0.1em;
   }
 
   .social1 {
@@ -269,7 +269,7 @@ ol, ul {
 /* Icons */
 .icons {
 	padding: 10px;
-	text-align: right;
+	text-align: center;
 }
 
 /* Section */
